Segunda actualizacion de commit local

--- a/Prueba1.html
+++ b/Prueba1.html
@@ -1,1 +1,5 @@
 <h1>Proyecto de Prueba en GitHub</h1>
+<h2>Cambio de Repositorio Local</h2>
+<body>
+    Hola Mundo! Seguimos testeando esta wea quatica. El mundo de la programación es un lugar extraño.
+</body>
